	specification would be longer than the limit (8192 bytes); it would
	return "somewhat random" results or segfault previously. (PR#13667)
	Further, arguments of type "language" or "symbol" are no longer
	allowed, as these, e.g., sprintf("%s", quote(list())), typically
	lead to unexpected results or hard to understand error messages.



	**************************************************
	*						 *
	*	       2.9 SERIES NEWS			 *
	*						 *
	**************************************************


		CHANGES IN R VERSION 2.9.0 patched


NEW FEATURES

    o	new anyDuplicated(x) returns 0 (= FALSE) or the index of the
	first duplicated entry of x.

    o	matplot(), matlines() and matpoints() now also obey a 'lend'
	argument, determining line end styles. (Wish of PR#13619).


BUG FIXES

    o	The ... argument was not handled properly when ... was found
	in the enclosure of the current function, rather than in the
	function header itself.	 (This caused integrate() to fail in
	certain cases.)

    o	col2rgb("#00000080", TRUE) would return the background colour.
	(Reported by Hadley Wickham.)

    o	interaction() now ensures that its result's levels are unique.

    o	packageDescription() and hence sessionInfo() now report the correct
	package version also for a non-attached loaded namespace of
	a version different from the default lib.loc.

    o	smoothScatter() now also works when e.g. xlim[2] < xlim[1].

    o	Invalid use of sprintf() such as sprintf("%S%") now give an error
	instead of a segmentation fault, as do very unusual cases such as
	sprintf("%s", tryCatch(stop(), error=identity)).

    o	parse_Rd() would mishandle closing braces when they occurred at
	the start of a line within an R string in an Rd file. (Reported
	by Alex Couture-Beil.)

    o	readNEWS() missed version numbers with more than one digit.

    o	building R --without-x no longer fails (PR#13665)

    o	printCoefmat(cbind(0,1)) now works too (PR#13677)



		CHANGES IN R VERSION 2.9.0

