@@ -1,5 +1,5 @@
 
-R version 2.10.0 Under development (unstable) (2009-04-25 r48402)
+R version 2.10.0 Under development (unstable) (2009-04-28 r48429)
 Copyright (C) 2009 The R Foundation for Statistical Computing
 ISBN 3-900051-07-0
 
@@ -785,4 +785,9 @@ Creating a new generic function for "sort" in ".GlobalEnv"
 > removeClass("myF")
 [1] TRUE
 > ## no validity check in R <= 2.9.0
+> 
+> ## as(x, .)   when x is from an "unregistered" S3 class :
+> as(structure(1:3, class = "foobar"), "vector")
+[1] 1 2 3
+> ## failed to work in R <= 2.9.0
 > 
